--- a/.github/workflows/backend-similarity-test.yml
+++ b/.github/workflows/backend-similarity-test.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: 📦 Install dependencies
         run: |
-          pip install -r backend/app/requirements.txt
+          pip install -r backend/requirements.txt
           pip install pytest
 
       - name: 🧪 Run similarity test
