Show print output from tests using pytest -s

--- a/.github/workflows/backend-similarity-test.yml
+++ b/.github/workflows/backend-similarity-test.yml
@@ -24,5 +24,6 @@ jobs:
           pip install -r backend/requirements.txt
           pip install pytest
 
-      - name: 🧪 Run similarity test
-        run: pytest backend/app/test_text_similarity.py
+      - name: 🔍 Run similarity test
+        run: pytest -s backend/app/test_text_similarity.py
+
