--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,36 @@
-/venv
-/node_modules
-/__pycache__
+# ------------------------
+# Node.js
+# ------------------------
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# ------------------------
+# Environment Variables
+# ------------------------
+.env
+*.pem
+!mock-cert.pem
+
+# ------------------------
+# Python
+# ------------------------
+**/venv/
+venv/
+__pycache__/
+*.py[cod]
+*.pyo
+*.log
+
+# ------------------------
+# FastAPI
+# ------------------------
+*.log
+
+# ------------------------
+# IDEs & OS
+# ------------------------
+.idea/
+.vscode/
+.DS_Store
