--- a/.github/workflows/dupligit.yml
+++ b/.github/workflows/dupligit.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: 🌐 Query /predict endpoint
         run: |
-          RESPONSE=$(curl -s -X POST http://<your-backend-url>/predict \
+          RESPONSE=$(curl -s -X POST https://420a-176-42-23-181.eu.ngrok.io/predictt \
             -H "Content-Type: application/json" \
             -d "{\"text\": \"${{ github.event.issue.title }}\"}")
           echo "$RESPONSE"
