--- a/.github/workflows/dupligit.yml
+++ b/.github/workflows/dupligit.yml
@@ -9,8 +9,8 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: read
       issues: write
+      contents: read  
 
     steps:
       - name: Checkout repository
@@ -24,7 +24,8 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -q sentence-transformers==2.2.2 faiss-cpu==1.7.4 requests
+          pip install numpy==1.24.4
+          pip install sentence-transformers==2.2.2 faiss-cpu==1.7.4 requests
 
       - name: Run duplicate checker
         run: python .github/scripts/check_duplicate.py
