--- a/.github/workflows/dupligit.yml
+++ b/.github/workflows/dupligit.yml
@@ -24,8 +24,11 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install numpy==1.24.4
-          pip install sentence-transformers==2.2.2 faiss-cpu==1.7.4 requests
+          pip install \
+            sentence-transformers==2.2.2 \
+            huggingface-hub==0.14.1 \
+            faiss-cpu==1.7.4 \
+            requests
 
       - name: Run duplicate checker
         run: python .github/scripts/check_duplicate.py
