--- a/.github/workflows/dupligit.yml
+++ b/.github/workflows/dupligit.yml
@@ -21,6 +21,10 @@ jobs:
         with:
           python-version: "3.10"
 
+      - name: Downgrade NumPy for FAISS compatibility
+        run: |
+          pip install numpy==1.26.4
+
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
