--- a/.github/workflows/dupligit.yml
+++ b/.github/workflows/dupligit.yml
@@ -45,6 +45,7 @@ jobs:
         run: python .github/scripts/check_duplicate.py
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }} # ✅ Add this line
           ISSUE_TITLE: ${{ github.event.issue.title }}
           ISSUE_NUMBER: ${{ github.event.issue.number }}
           REPO: ${{ github.repository }}
