--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ package-lock.json
 .idea/modules.xml
 package-lock.json
 package-lock.json
+backend/app/venv
+/dupligit-bot/node_modules
+/backend/__pycache__
+/backend/app/__pycache__
