--- a/.github/workflows/dupligit.yml
+++ b/.github/workflows/dupligit.yml
@@ -39,11 +39,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r backend/requirements.txt
+           pip install -r dupligit-bot/backend/requirements.txt  # ✅ Güncel yol
 
       
       - name: Run duplicate checker
-        run: python .github/scripts/check_duplicate.py
+        run: python dupligit-bot/.github/scripts/check_duplicate.py
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }} # ✅ Add this line
