--- a/.github/workflows/dupligit.yml
+++ b/.github/workflows/dupligit.yml
@@ -1,13 +1,17 @@
-name: Detect Duplicate Issues
+name: Dupligit Bot
 
 on:
   issues:
-    types: [opened]
+    types: 
+      - opened
+  issue_comment:
+    types:
+      - created
 
 jobs:
   check-duplicate:
+    # only runs on new issues (issues.opened)
     runs-on: ubuntu-latest
-
     permissions:
       issues: write
       contents: read
@@ -26,7 +30,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: '3.10'
 
       - name: Cache pip dependencies
         uses: actions/cache@v3
@@ -39,13 +43,47 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-           pip install -r backend/requirements.txt
+          pip install -r backend/requirements.txt
 
       - name: Run duplicate checker
         run: python .github/scripts/check_duplicate.py
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }} # ✅ Add this line
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
           ISSUE_TITLE: ${{ github.event.issue.title }}
           ISSUE_NUMBER: ${{ github.event.issue.number }}
           REPO: ${{ github.repository }}
+
+
+  mark-duplicate:
+    # only runs on new comments containing "/mark-duplicate"
+    if: |
+      github.event_name == 'issue_comment' &&
+      contains(github.event.comment.body, '/mark-duplicate')
+    runs-on: ubuntu-latest
+    permissions:
+      issues: write
+      contents: read
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r backend/requirements.txt
+
+      - name: Run mark duplicate handler
+        run: python .github/scripts/mark_duplicate.py
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ISSUE_BODY: ${{ github.event.comment.body }}
+          ISSUE_NUMBER: ${{ github.event.issue.number }}
+          REPO: ${{ github.repository }}
+          COMMENT_AUTHOR: ${{ github.event.comment.user.login }}
